# scientific-simulation-engine

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.bat
alembic/versions/: 001_initial_schema.py
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js
dashboard/src/components/: Sidebar.jsx
dashboard/src/pages/: DagVisualizer.jsx  Dashboard.jsx  JobExplorer.jsx  SubmitJob.jsx  SystemHealth.jsx
docs/: API.md  ARCHITECTURE.md  TESTING.md
scripts/: run_reaper.py
simulation-engine/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
simulation-engine/alembic/: env.py
simulation-engine/docs/: API.md  ARCHITECTURE.md  STATE_MACHINE.md  TESTING.md
simulation-engine/scripts/: demo_concurrent.py  run_retry_scheduler.py  run_worker.py  seed_demo.py
simulation-engine/src/: config.py
simulation-engine/src/core/: circuit_breaker.py  (+4 more)
simulation-engine/tests/: conftest.py
src/: config.py  main.py
src/api/: dependencies.py
src/core/: reaper.py  retry_scheduler.py  state_machine.py
src/dag/: executor.py  llm_planner.py  validator.py
src/db/: session.py
src/models/: checkpoint.py  dag.py  enums.py  job.py
src/queue/: publisher.py
src/schemas/: common.py  control.py  llm.py
src/worker/: base.py  checkpoint.py  executor.py  signal_handler.py  simulation_runner.py
tests/integration/: test_cancel_pause.py  test_dag_execution.py  test_edge_cases.py  test_job_lifecycle.py
tests/unit/: test_state_machine.py
(+30 files in other folders)
